--- a/css/style.css
+++ b/css/style.css
@@ -211,10 +211,6 @@ a {
   margin: 0 auto;
 }
 
-.container--my-experience {
-  padding-top: 27px;
-}
-
 .content__column--infographics::after {
   position: absolute;
   top: -10px;
@@ -297,7 +293,7 @@ a {
   display: inline-block;
 
   width: 2px;
-  height: 38px;
+  height: 36px;
   margin-right: 20px;
 
   content: "";
@@ -315,7 +311,7 @@ a {
   display: inline-block;
 
   width: 2px;
-  height: 38px;
+  height: 36px;
   margin-left: 20px;
 
   content: "";
@@ -330,7 +326,7 @@ a {
   position: absolute;
   z-index: 3;
   top: -30px;
-  right: -3px;
+  right: -4px;
 
   padding: 50px;
   padding-right: 0;
@@ -376,6 +372,7 @@ a {
 
   -webkit-transform: skew(-24deg);
           transform: skew(-24deg);
+
   vertical-align: top;
 
   background-color: #f48647;
@@ -1280,6 +1277,11 @@ main {
   padding-bottom: 12px;
 }
 
+.contacts {
+  position: relative;
+  z-index: 1;
+}
+
 .contacts__btn {
   cursor: pointer;
 }
@@ -1653,7 +1655,6 @@ main {
 .navigation__list--fixed-hat {
   z-index: 2;
   top: -18px;
-  right: -2px;
 
   padding-top: 20px;
 }
@@ -1668,5 +1669,14 @@ main {
 }
 
 .phone-block--hidden {
-  display: none;
+  transform: scale(0);
+  transition: transform 0s linear 0.3s;
+}
+
+.scroll--show {
+  display: block;
+}
+
+.gallery--js-on {
+  overflow: hidden;
 }
