--- a/css/style.css
+++ b/css/style.css
@@ -450,10 +450,6 @@ a {
   margin-left: 100px;
   padding-left: 50px;
   margin-right: auto;
-
-  width: 600px;
-  overflow: hidden;
-  transform: skew(-24deg);
 }
 
 .page-title__role {
@@ -468,7 +464,7 @@ a {
 .page-title__category {
   transform-origin: left center;
   animation-timing-function: linear;
-  animation-duration: 0.8s;
+  animation-duration: 0.6s;
 }
 
 .page-title__category--disappear {
@@ -480,13 +476,13 @@ a {
 }
 
 @keyframes pageTitleDisappear {
-  0% {transform: translateX(0);}
-  100% {transform: translateX(600px);}
+  0% {opacity: 1;}
+  100% {opacity: 0;}
 }
 
 @keyframes pageTitleAppear {
-  0% {transform: translateX(-600px);}
-  100% {transform: translateX(0);}
+  0% {opacity: 0;}
+  100% {opacity: 1;}
 }
 
 .phone-block {
@@ -673,28 +669,28 @@ a {
   font-family: "Lato Thin", "Arial", sans-serif;
   font-size: 18px;
   font-weight: 200;
-  line-height: 24px;
+  line-height: 40px;
 }
 
 .phone-block__input::-moz-placeholder {
   font-family: "Lato Thin", "Arial", sans-serif;
   font-size: 18px;
   font-weight: 200;
-  line-height: 24px;
+  line-height: 40px;
 }
 
 .phone-block__input:-moz-placeholder {
   font-family: "Lato Thin", "Arial", sans-serif;
   font-size: 18px;
   font-weight: 200;
-  line-height: 24px;
+  line-height: 40px;
 }
 
 .phone-block__input:-ms-input-placeholder {
   font-family: "Lato Thin", "Arial", sans-serif;
   font-size: 18px;
   font-weight: 200;
-  line-height: 24px;
+  line-height: 40px;
 }
 
 .phone-block__input--name:disabled {
@@ -1035,7 +1031,7 @@ main {
 }
 
 .gallery__item--popup {
-  position: absolute;
+  position: fixed;
   z-index: 5;
   top: 107px;
   bottom: 29px;
@@ -1494,27 +1490,43 @@ main {
   font-family: "Lato Regular", "Arial", sans-serif;
   font-size: 14px;
   font-weight: 400;
-  line-height: 18px;
+  line-height: 30px;
 }
 
 .contacts__input::-moz-placeholder {
   font-family: "Lato Regular", "Arial", sans-serif;
   font-size: 14px;
   font-weight: 400;
-  line-height: 18px;
+  line-height: 30px;
 }
 
 .contacts__input:-moz-placeholder {
   font-family: "Lato Regular", "Arial", sans-serif;
   font-size: 14px;
   font-weight: 400;
-  line-height: 18px;
+  line-height: 30px;
 }
 
 .contacts__input:-ms-input-placeholder {
   font-family: "Lato Regular", "Arial", sans-serif;
   font-size: 14px;
   font-weight: 400;
+  line-height: 30px;
+}
+
+.contacts__input--message::-webkit-input-placeholder {
+  line-height: 18px;
+}
+
+.contacts__input--message::-moz-placeholder  {
+  line-height: 18px;
+}
+
+.contacts__input--message:-moz-placeholder {
+  line-height: 18px;
+}
+
+.contacts__input--message:-ms-input-placeholder {
   line-height: 18px;
 }
 
@@ -1658,10 +1670,6 @@ main {
   text-align: center;
 
   background-color: #2a3140;
-}
-
-.js__wrapper--page-title {
-  transform: skew(24deg);
 }
 
 .js__wrapper--show {
